docs: 更新 JDK 27 文档与 Chen Liang 档案，新增子仓库富化脚本
JDK 27 (by-version/jdk27):
- 补全 9 个已 Target JEP (523/527/531/532/533/534/536/537/538)，含官方摘要与前身 JEP 交叉链接
- 修正 GA 日期为 2026-09-15（原误为 09-16）
- 状态更新为 Rampdown Phase One（2026-06-04 特性集冻结）
- 修复目录乱码字符

Chen Liang (by-contributor/profiles/chen-liang.md):
- Integrated PRs 237→244，Valhalla 57→70（GitHub API 核实 2026-06-06）
- 按 JBS fix_version 重算版本分布（JDK 24 峰值 72）
- 更新审查者协作网络（新增 Mandy Chung、Joe Darcy）

脚本:
- 新增 enrich-subrepo-csvs.py：子仓库 org/country/review_days 增量富化（幂等）
- generate-version-contributions.py 改用动态日期